--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "readme-generator",
-  "version": "1.0.0",
+  "name": "gorav-readme-generator",
+  "version": "1.1.2",
   "description": "This tool automatically generates README.md files for your projects by analyzing your codebase and using Google's Gemini API.",
   "main": "index.js",
   "type":"module",
-  "bin": {
-    "generate-readme": "./index.js"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Gorav22/Readme-generator-package.git" 
   },
+  "bin": {
+    "generate-readme": "index.js"
+},
   "scripts": {
     "generate": "node index.js"
   },
