--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gorav-readme-generator",
-  "version": "1.1.8",
+  "version": "1.1.10",
   "description": "This tool automatically generates README.md files for your projects by analyzing your codebase and using Google's Gemini API.",
   "main": "generate.js",
   "type": "module",
@@ -19,7 +19,8 @@
     "Readme-creator",
     "Auto-readme-generator",
     "Readme",
-    "Generator"
+    "Generator",
+    "gorav-readme-generator"
   ],
   "author": "Gorav Jindal",
   "license": "ISC",
@@ -30,7 +31,6 @@
     "dotenv": "^16.4.7",
     "fs-extra": "^11.2.0",
     "glob": "^11.0.1",
-    "gorav-readme-generator": "^1.1.3",
     "inquirer": "^12.3.1"
   }
 }
